1.4.0i2p3:
    Multisite:
    * 3938 FIX: tactical overview: fixed wrong display of number of service problems when stale services are available...


1.4.0i2p2:
    Multisite:
    * 4046 FIX: Repaired html rendering....


1.4.0i2p1:
    Multisite:
    * 4040 FIX: Fix error in view about "No WATO folder ..." in case of host imported via cmcdump...

    WATO:
    * 4038 FIX: Fix exception in WATO when adding a new host...
    * 4039 FIX: Fix UnicodeEncodeError exception in WATO folder display...
    * 4041 FIX: Fix exception when editing global configuration settings...


1.4.0i2:
    Core & Setup:
    * 4036 Measurement of time used by Check_MK now includes time waited for agent...
    * 3648 FIX: Fixed log file parsing of host states...
    * 3965 FIX: Nagios: Improved handling of broken core config...

    Checks & Agents:
    * 3841 cups_queues: thresholds are now configurable in WATO...
    * 3910 oracle_instance: noarchivelog can now be ignored
    * 3911 if.include: each operational state can now be mapped to a check state
    * 3912 elphase.include: now device states can be mapped to monitoring states
    * 3913 gude_powerbanks, gude_relayport, gude_temp, gude_humidity: new checks for Gude Power Control devices
    * 3954 postfix_mailq_status: new check which monitors the status of postfix mail instances
    * 3945 fortigate_node: Memory on fortigate clusters are now configurable by WATO...
    * 3956 fileinfo.groups: now allows regular expressions within include and exclude patterns each beginning with a tilde
    * 3947 mssql_blocked_sessions: thresholds for wait time can be set now...
    * 3830 netapp_api_luns: new check to monitor the filesystem usage of LUNs
    * 3949 ucd_cpu_load: Genugate devices are now displaying CPU load...
    * 3950 openbsd_sensors: Genugate devices are now handling hardware sensors...
    * 3749 storcli_pdisks, storcli_vdrives: New checks to monitor RAID status via StorCLI utility