@@ -1,0 +1,10 @@
+Title: Improved error handling when trying to edit not existing global setting
+Level: 1
+Component: wato
+Class: fix
+Compatible: compat
+State: unknown
+Version: 1.4.0i2p3
+Date: 1478508930
+
+
