@@ -2,6 +2,9 @@
     Multisite:
     * 3938 FIX: tactical overview: fixed wrong display of number of service problems when stale services are available...
 
+    WATO:
+    * 3975 FIX: Improved error handling when trying to edit not existing global setting
+
 
 1.4.0i2p2:
     Multisite:
